# fork-starpls

./: Cargo.toml  EXTENSION_QUICKSTART.md  EXTENSION_SYSTEM_IMPLEMENTATION.md  MODULE.bazel  Makefile  test.bzl  test.star  test_complex.star  test_module.star  test_pattern.bzl  test_simple.star  test_simple_ext.json  test_stub.json  test_with_module.json
.github/workflows/: feature-branch-build.yml
crates/starpls/: Cargo.toml
crates/starpls/src/: document.rs  event_loop.rs  extensions.rs  main.rs  server.rs
crates/starpls/src/commands/: check.rs  server.rs
crates/starpls/src/handlers/: requests.rs
crates/starpls_bazel/src/: lib.rs
crates/starpls_common/src/: extensions.rs  lib.rs  type_expr.rs
crates/starpls_ext/: BUILD.bazel  Cargo.toml
crates/starpls_ext/src/: converter.rs  error.rs  lib.rs  loader.rs  parser.rs  types.rs  validator.rs
crates/starpls_hir/src/: lib.rs  test_database.rs
crates/starpls_hir/src/def/: resolver.rs
crates/starpls_ide/src/: lib.rs
crates/starpls_stubs/: BUILD.bazel  Cargo.toml
crates/starpls_stubs/src/: lib.rs
